--- a/privacy.html
+++ b/privacy.html
@@ -185,7 +185,7 @@ $('.j-change-lang').click(changeLang);
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html"><img alt="Hashing24" src="i/hashing-logo.png"></a>
+			<a class="navbar-brand" href="index2.html"><img alt="Hashing24" src="i/hashing-logo.png"></a>
 		</div>
 	    <div class="collapse navbar-collapse" id="top-navbar-collapse">
             <ul class="nav navbar-nav navbar-right cc-nav">
@@ -307,7 +307,7 @@ $('.j-change-lang').click(changeLang);
     </div>
     <div class="row">
         <div class="col-md-12">
-            <a href="index.html" class="btn btn-link js-reset_password" data-loading-text="Loading..."><small>I can&#39;t access my account</small></a>
+            <a href="index2.html" class="btn btn-link js-reset_password" data-loading-text="Loading..."><small>I can&#39;t access my account</small></a>
         </div>
     </div>
     <div class="js-auth_inputs js-auth_verification display_none">
@@ -749,7 +749,7 @@ var fullDateString = new Date();
             <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
                 <div class="row">
                     <div class="col-sm-4 footer-col">
-                        <p><a href="index.html">Home</a><p>
+                        <p><a href="index2.html">Home</a><p>
                         <p><a href="about.html">About Us</a></p>
                         <p><a href="howitworks.html">How it Works</a></p>
                         <p><a href="tariffs.html">Prices</a></p>
